[package]
name = "Flash-loan-arbitrage-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
rand = "0.8"

solana-sdk = "2.1"
solana-rpc-client  = "2.1"
solana-commitment-config = "2.1"
solana-message  = "2.1"
solana-system-interface= "1.0"
spl-token = "7.0"
spl-associated-token-account = "6.0"

orca_whirlpools = "2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
