[package]
name = "Flash-loan-arbitrage-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
rand = "0.8"

solana-sdk = "2.1"
solana-rpc-client = "2.1"
solana-commitment-config = "2.1"
solana-message  = "2.1"
solana-system-interface= "1.0"
spl-token = "7.0"
spl-associated-token-account = "6.0"
solana-address-lookup-table-interface = "2.2"
orca_whirlpools = "2.0"
async-trait = "0.1"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.150"
bincode = "1.3"
bs58 = "0.5"
tokio-stream = "0.1"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

